--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,271 +1,144 @@
-* {
-  box-sizing: border-box;
+@media screen and (min-width: 767px) { 
+body{
+  font-family: "Avenir Next";
 }
-
-body {
-  margin: 0;
-  font-family: "Hiragino Kaku Gothic ProN";
+li{
+  list-style: none;
 }
-
-a {
-  text-decoration: none;
+.header{
+  background-color:rgba(233, 198, 145, 0.623);
+  height:90px;
+  margin:4px;
 }
-
-.container {
-  width: 100%;
-  padding: 0 15px;
-  margin: 0 auto;
-}
-
-.top-wrapper {
-  padding: 180px 0 100px 0;
-  background-image: url(top.png);
-  background-size: cover;
-  color: white;
-  text-align: center;
-}
-
-.top-wrapper h1 {
-  opacity: 0.7;
-  font-size: 45px;
-  letter-spacing: 5px;
-}
-
-.top-wrapper p {
-  opacity: 0.7;
-  font-size: 16px;
-  margin-bottom: 40px;
-}
-
-.btn-wrapper {
-  text-align: center;
-}
-
-.btn-wrapper p {
-  margin-bottom: 20px;
-}
-
-.signup {
-  background-color: #239b76;
-}
-
-.facebook {
-  background-color: #3b5998;
-  margin-right: 10px;
-}
-
-.twitter {
-  background-color: #55acee;
-}
-
-.btn {
-  padding: 8px 24px;
-  color: white;
-  display: inline-block;
-  opacity: 0.8;
-  border-radius: 4px;
-  text-align: center;
-}
-
-.btn:hover {
-  opacity: 1;
-}
-
-.fa {
-  margin-right: 5px;
-}
-
-header {
-  height: 65px;
-  width: 100%;
-  background-color: rgba(34,49,52,0.9);
-  position :fixed;
-  top: 0;
-  z-index: 10;
-}
-
-.logo {
-  width: 124px;
-  margin-top: 20px;
-}
-
-.header-left {
+.header-logo{
   float: left;
+  color: rgba(255, 255, 255, 0.747);
+  font-size:36px;
+  padding:20px 40px;
 }
-
-.header-right {
-  float: right;
-  margin-right: -25px;
+.header-list li{
+  float:left;
+  font-size: 33px;
+  padding:20px 20px;
 }
-
-.header-right a {
-  line-height: 65px;
-  padding: 0 25px;
-  color: white;
-  display: block;
+.twitter-timeline{
+  float:right;
+}
+main{
+  padding:33px 20px;
+}
+body{
+  background-image: url("alley社会学-3890787_1280.jpg");
+}
+.copy-container h1{
+color: rgb(252, 252, 250);
+padding-left: 50px;
+  font-size:190px;
+}
+.contents{
+  height: 500px;
+  margin-top: 100px;
+}
+.section-title{
+  border-bottom:2px solid rgb(244, 244, 247);
+  font-size:28px;
+  padding-bottom:9px;
+  margin-bottom:50px;
+  color: #fff;
+}
+.contents-item{
   float: left;
-  transition: all 0.5s;
+  margin-right: 40px;
 }
-
-.header-right a:hover {
-  background-color: rgba(255,255,255,0.3);
+.contents-item p{
+  font-size:26px;
+  margin-top: 25px;
+  color: #fff;
 }
-
-.lesson-wrapper {
-  height: 580px;
-  padding-bottom: 80px;
-  padding-left: 5%;
-  padding-right: 5%;
-  background-color: #f7f7f7;
-  text-align: center;
+.footer{
+  background-color: rgba(66, 57, 39, 0.74);
+  color:#fff;
+  height:100px;
+  padding:32px;
 }
-
-.heading {
-  padding-top: 80px;
-  padding-bottom: 50px;
-  color: #5f5d60;
-}
-
-.heading h2 {
-  font-weight: normal;
-}
-
-.lesson {
+.footer-logo{
   float: left;
-  width: 25%;
+  font-size:36px;
 }
-
-.lesson-icon {
-  position: relative;
+.footer-list{
+  float: left;
+  color:#fff;
+  font-size: 17px;
 }
-
-.lesson-icon p {
-  position: absolute;
-  top: 37%;
-  width: 100%;
-  color: white;
+.footer-list li{
+padding-bottom: 20px;
 }
-
-.text-contents {
-  width: 80%;
-  display: inline-block;
-  margin-top: 15px;
-  font-size: 13px;
-  color: #b3aeb5;
+.contact{
+  float:right;
 }
-
-.heading h3 {
-  font-weight: normal;
-}
-
-.message-wrapper {
-  border-bottom: 1px solid #eee;
-  padding-bottom: 80px;
-  text-align: center;
-}
-
-.message {
-  padding: 15px 40px;
-  background-color: #5dca88;
-  cursor: pointer;
-  box-shadow: 0px 7px #1a7940;
-}
-
-.message:active {
-  position: relative;
-  top: 7px;
-  box-shadow: none;
-}
-
-footer img {
-  width: 125px;
-}
-
-footer p {
-  color: #b3aeb5;
-  font-size: 12px;
-}
-
-footer {
-  padding-top: 30px;
-  padding-bottom: 20px;
-}
-
-.menu-icon {
-  color: white;
-  float: right;
-  font-size: 25px;
-  padding: 21px 0;
-  display: none;
-}
-
-.clear {
-  clear: left;
-}
-
-@media all and (max-width: 1000px) {
-  .lesson {
-    width: 50%;
-    margin-bottom: 50px;
+address{
+  font-size:20px;
+} }
+@media screen and (max-width:767px) { 
+  body{
+    font-family: "Avenir Next";
   }
-
-  .lesson-wrapper {
-    height: 990px;
+  li{
+    list-style: none;
   }
-
-  footer {
-    text-align: center;
+  body{
+    background-image: url("alley社会学-3890787_1280.jpg");
   }
-}
-
-@media all and (max-width: 750px) {
-  .top-wrapper h1 {
-    font-size: 32px;
+ .main{
+   padding-top: 90px;
+ }
+  .header{
+    background-color:rgba(233, 198, 145, 0.623);
+    height:110px;
+    margin:4px;
   }
-
-  .heading h2 {
-    font-size: 20px;
+  .header-logo{
+    float: left;
+    color: rgba(255, 255, 255, 0.747);
+    font-size:30px;
+    padding:30px 10px;
   }
-}
-
-@media all and (max-width: 670px) {
-  .header-right {
-    display: none;
+  .header-list li{
+    color: blanchedalmond;
+    float: right;
+    font-size:20px;
+    padding:3px;
   }
-
-  .menu-icon {
-    display: block;
+  .copy-container h1{
+    color:#fff;
+    padding-top: 70px;
+    padding-left: 20px;
+      font-size:60px;
+    }
+  .contents-item{
+    float:none;
+    margin-right: 40px;
   }
-
-  .top-wrapper .btn {
-    width: 100%;
+ .contents-item img{
+   width:75%;
+   height: auto;
+ }
+  .contents-item p{
+    font-size:20px;
+    margin-top:1px;
+    margin-bottom:30px;
+    color: #fff;
   }
-
-  .twitter {
-    margin-top: 10px;
+  .footer{
+    background-color: rgba(66, 57, 39, 0.74);
+    color:#fff;
+    height:140px;
+    padding:10px;
   }
-
-  .top-wrapper {
-    text-align: left;
-  }
-
-  .top-wrapper h1 {
-    font-size: 24px;
-  }
-
-  .top-wrapper p {
-    font-size: 14px;
-  }
-
-  .lesson {
-    width: 100%;
-  }
-
-  .lesson-wrapper {
-    height: 1700px;
-  }
-
-  .message-wrapper .btn {
-    width: 100%;
+  .footer-logo{
+    float: left;
+    font-size:20px;
+    margin-bottom:70px;
+    margin-right:30px;
   }
 }
