--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,144 +1,156 @@
 @media screen and (min-width: 767px) { 
-body{
-  font-family: "Avenir Next";
-}
-li{
-  list-style: none;
-}
-.header{
-  background-color:rgba(233, 198, 145, 0.623);
-  height:90px;
-  margin:4px;
-}
-.header-logo{
-  float: left;
-  color: rgba(255, 255, 255, 0.747);
-  font-size:36px;
-  padding:20px 40px;
-}
-.header-list li{
-  float:left;
-  font-size: 33px;
-  padding:20px 20px;
-}
-.twitter-timeline{
-  float:right;
-}
-main{
-  padding:33px 20px;
-}
-body{
-  background-image: url("alley社会学-3890787_1280.jpg");
-}
-.copy-container h1{
-color: rgb(252, 252, 250);
-padding-left: 50px;
-  font-size:190px;
-}
-.contents{
-  height: 500px;
-  margin-top: 100px;
-}
-.section-title{
-  border-bottom:2px solid rgb(244, 244, 247);
-  font-size:28px;
-  padding-bottom:9px;
-  margin-bottom:50px;
-  color: #fff;
-}
-.contents-item{
-  float: left;
-  margin-right: 40px;
-}
-.contents-item p{
-  font-size:26px;
-  margin-top: 25px;
-  color: #fff;
-}
-.footer{
-  background-color: rgba(66, 57, 39, 0.74);
-  color:#fff;
-  height:100px;
-  padding:32px;
-}
-.footer-logo{
-  float: left;
-  font-size:36px;
-}
-.footer-list{
-  float: left;
-  color:#fff;
-  font-size: 17px;
-}
-.footer-list li{
-padding-bottom: 20px;
-}
-.contact{
-  float:right;
-}
-address{
-  font-size:20px;
-} }
-@media screen and (max-width:767px) { 
   body{
     font-family: "Avenir Next";
   }
   li{
     list-style: none;
   }
-  body{
-    background-image: url("alley社会学-3890787_1280.jpg");
-  }
- .main{
-   padding-top: 90px;
- }
   .header{
     background-color:rgba(233, 198, 145, 0.623);
-    height:110px;
+    height:90px;
     margin:4px;
   }
   .header-logo{
     float: left;
     color: rgba(255, 255, 255, 0.747);
-    font-size:30px;
-    padding:30px 10px;
+    font-size:36px;
+    padding:20px 40px;
   }
   .header-list li{
-    color: blanchedalmond;
-    float: right;
-    font-size:20px;
-    padding:3px;
+    color: #fff;
+    float:left;
+    font-size: 33px;
+    padding:20px 20px;
+  }
+  .twitter-timeline{
+    float:right;
+  }
+  main{
+    padding:33px 20px;
+  }
+  body{
+    background-image: url("alley社会学-3890787_1280.jpg");
   }
   .copy-container h1{
-    color:#fff;
-    padding-top: 70px;
-    padding-left: 20px;
-      font-size:60px;
-    }
+  color: rgb(252, 252, 250);
+  padding-left: 50px;
+    font-size:190px;
+  }
+  .contents{
+    height: 500px;
+    margin-top: 100px;
+  }
+  .section-title{
+    border-bottom:2px solid rgb(244, 244, 247);
+    font-size:28px;
+    padding-bottom:9px;
+    margin-bottom:50px;
+    color: #fff;
+  }
   .contents-item{
-    float:none;
+    float: left;
     margin-right: 40px;
   }
- .contents-item img{
-   width:75%;
-   height: auto;
- }
   .contents-item p{
-    font-size:20px;
-    margin-top:1px;
-    margin-bottom:30px;
+    font-size:26px;
+    margin-top: 25px;
     color: #fff;
   }
   .footer{
     background-color: rgba(66, 57, 39, 0.74);
     color:#fff;
-    height:140px;
-    padding:10px;
+    height:100px;
+    padding:32px;
   }
   .footer-logo{
+    color: #fff;
     float: left;
-    font-size:20px;
-    margin-bottom:70px;
-    margin-right:30px;
+    font-size:36px;
   }
-}
+  .footer-list{
+    float: left;
+    color:#fff;
+    font-size: 17px;
+  }
+  .footer-list li{
+    color: #fff;
+  padding-bottom: 20px;
+  }
+  .contact{
+    float:right;
+  }
+  address{
+    font-size:20px;
+  } }
+  @media screen and (max-width:767px) { 
+    body{
+      font-family: "Avenir Next";
+    }
+    li{
+      list-style: none;
+    }
+    body{
+      background-image: url("alley社会学-3890787_1280.jpg");
+    }
+   .main{
+     padding-top: 90px;
+   }
+    .header{
+      background-color:rgba(233, 198, 145, 0.623);
+      height:110px;
+      margin:4px;
+    }
+    .header-logo{
+      float: left;
+      color: rgba(255, 255, 255, 0.747);
+      font-size:30px;
+      padding:15px 20px 17px 20px;
+    }
+    .header-list li{
+      color: blanchedalmond;
+     
+      font-size:20px;
+      padding:3px;
+    }
+    .copy-container h1{
+      color:#fff;
+      padding-top: 90px;
+      padding-left: 20px;
+        font-size:60px;
+      }
+      .contents h3{
+        color:#fff;
+        border-bottom: 1px solid #fff;
+      }
+    .contents-item{
+      float:none;
+      margin-right: 40px;
+    }
+   .contents-item img{
+     width:75%;
+     height: auto;
+   }
+    .contents-item p{
+      font-size:20px;
+      margin-top:1px;
+      margin-bottom:30px;
+      color: #fff;
+    }
+    .footer{
+      background-color: rgba(66, 57, 39, 0.74);
+      color:#fff;
+      height:140px;
+      padding:10px;
+    }
+    .footer-logo{
+      float: left;
+      font-size:30px;
+      margin-bottom:100px;
+      margin-right:30px;
+      color: #fff;
+    }
+    .footer-list li{
+      color: #fff;
+      font-size: 17px;
+    }
+  }
