--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,4 +1,8 @@
 @media screen and (min-width: 767px) { 
+  a:link {color:#fff; transition: 2s;}
+  a:visited{color:#fff;}
+  a:hover { color:#30e4f1; }
+
   body{
     font-family: "Avenir Next";
   }
@@ -12,12 +16,10 @@
   }
   .header-logo{
     float: left;
-    color: rgba(255, 255, 255, 0.747);
     font-size:36px;
     padding:20px 40px;
   }
   .header-list li{
-    color: #fff;
     float:left;
     font-size: 33px;
     padding:20px 20px;
@@ -29,7 +31,7 @@
     padding:33px 20px;
   }
   body{
-    background-image: url("alley社会学-3890787_1280.jpg");
+    background-image: url("alley-3890787_1280.jpg");
   }
   .copy-container h1{
   color: rgb(252, 252, 250);
@@ -45,7 +47,7 @@
     font-size:28px;
     padding-bottom:9px;
     margin-bottom:50px;
-    color: #fff;
+    color:#fff;
   }
   .contents-item{
     float: left;
@@ -54,26 +56,21 @@
   .contents-item p{
     font-size:26px;
     margin-top: 25px;
-    color: #fff;
   }
   .footer{
     background-color: rgba(66, 57, 39, 0.74);
-    color:#fff;
     height:100px;
     padding:32px;
   }
   .footer-logo{
-    color: #fff;
     float: left;
     font-size:36px;
   }
   .footer-list{
     float: left;
-    color:#fff;
     font-size: 17px;
   }
   .footer-list li{
-    color: #fff;
   padding-bottom: 20px;
   }
   .contact{
@@ -90,7 +87,7 @@
       list-style: none;
     }
     body{
-      background-image: url("alley社会学-3890787_1280.jpg");
+      background-image: url("alley-3890787_1280.jpg");
     }
    .main{
      padding-top: 90px;
@@ -102,14 +99,11 @@
     }
     .header-logo{
       float: left;
-      color: rgba(255, 255, 255, 0.747);
       font-size:30px;
       padding:15px 20px 17px 20px;
     }
     .header-list li{
-      color: blanchedalmond;
-     
-      font-size:20px;
+      font-size:16px;
       padding:3px;
     }
     .copy-container h1{
@@ -134,11 +128,9 @@
       font-size:20px;
       margin-top:1px;
       margin-bottom:30px;
-      color: #fff;
     }
     .footer{
       background-color: rgba(66, 57, 39, 0.74);
-      color:#fff;
       height:140px;
       padding:10px;
     }
@@ -147,10 +139,11 @@
       font-size:30px;
       margin-bottom:100px;
       margin-right:30px;
-      color: #fff;
     }
     .footer-list li{
-      color: #fff;
       font-size: 17px;
     }
+    a:link {color:#fff; transition: 2s;}
+    a:visited{color:#fff;}
+    a:hover { color:#30e4f1; }
   }
