--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,23 +1,23 @@
-@media screen and (min-width: 767px) { 
-  a:link {color:#fff; transition: 2s;}
+@media screen and (min-width:767px) { 
+  a:link {color:#fff; transition:2s;}
   a:visited{color:#fff;}
   a:hover { color:#30e4f1; }
-
   body{
-    font-family: "Avenir Next";
+    font-family:"Avenir Next";
+    background-image: url("alley.jpg");
   }
   li{
     list-style: none;
   }
-  .header{
+  header{
     background-color:rgba(233, 198, 145, 0.623);
     height:90px;
     margin:4px;
   }
   .header-logo{
-    float: left;
-    font-size:36px;
-    padding:20px 40px;
+    float:left;
+    font-size:40px;
+    padding:10px 60px 20px 20px;
   }
   .header-list li{
     float:left;
@@ -27,12 +27,6 @@
   .twitter-timeline{
     float:right;
   }
-  main{
-    padding:33px 20px;
-  }
-  body{
-    background-image: url("alley-3890787_1280.jpg");
-  }
   .copy-container h1{
   color: rgb(252, 252, 250);
   padding-left: 50px;
@@ -41,6 +35,7 @@
   .contents{
     height: 500px;
     margin-top: 100px;
+    margin-left:40px;
   }
   .section-title{
     border-bottom:2px solid rgb(244, 244, 247);
@@ -57,42 +52,22 @@
     font-size:26px;
     margin-top: 25px;
   }
-  .footer{
-    background-color: rgba(66, 57, 39, 0.74);
-    height:100px;
-    padding:32px;
   }
-  .footer-logo{
-    float: left;
-    font-size:36px;
-  }
-  .footer-list{
-    float: left;
-    font-size: 17px;
-  }
-  .footer-list li{
-  padding-bottom: 20px;
-  }
-  .contact{
-    float:right;
-  }
-  address{
-    font-size:20px;
-  } }
   @media screen and (max-width:767px) { 
+    a:link {color:#fff; transition:2s;}
+    a:visited{color:#fff;}
+    a:hover { color:#30e4f1;}
     body{
       font-family: "Avenir Next";
+      background-image:url("alley.jpg")
     }
     li{
       list-style: none;
     }
-    body{
-      background-image: url("alley-3890787_1280.jpg");
-    }
    .main{
      padding-top: 90px;
    }
-    .header{
+    header{
       background-color:rgba(233, 198, 145, 0.623);
       height:110px;
       margin:4px;
@@ -110,7 +85,7 @@
       color:#fff;
       padding-top: 90px;
       padding-left: 20px;
-        font-size:60px;
+      font-size:60px;
       }
       .contents h3{
         color:#fff;
@@ -129,21 +104,4 @@
       margin-top:1px;
       margin-bottom:30px;
     }
-    .footer{
-      background-color: rgba(66, 57, 39, 0.74);
-      height:140px;
-      padding:10px;
-    }
-    .footer-logo{
-      float: left;
-      font-size:30px;
-      margin-bottom:100px;
-      margin-right:30px;
-    }
-    .footer-list li{
-      font-size: 17px;
-    }
-    a:link {color:#fff; transition: 2s;}
-    a:visited{color:#fff;}
-    a:hover { color:#30e4f1; }
   }
