--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,16 +1,16 @@
 @media screen and (min-width:767px) { 
-  a:link {color:#fff; transition:2s;}
+  a:link {color:#fff;transition:2s;}
   a:visited{color:#fff;}
-  a:hover { color:#30e4f1; }
+  a:hover {color:#30e4f1;}
   body{
     font-family:"Avenir Next";
-    background-image: url("alley.jpg");
+    background-image:url("alley.jpg");
   }
   li{
     list-style: none;
   }
   header{
-    background-color:rgba(233, 198, 145, 0.623);
+    background-color:rgba(233,198,145,0.623);
     height:90px;
     margin:4px;
   }
@@ -21,59 +21,59 @@
   }
   .header-list li{
     float:left;
-    font-size: 33px;
+    font-size:33px;
     padding:20px 20px;
   }
   .twitter-timeline{
     float:right;
   }
   .copy-container h1{
-  color: rgb(252, 252, 250);
-  padding-left: 50px;
+  color: rgb(252,252,250);
+  padding-left:50px;
     font-size:190px;
   }
   .contents{
-    height: 500px;
-    margin-top: 100px;
+    height:500px;
+    margin-top:100px;
     margin-left:40px;
   }
   .section-title{
-    border-bottom:2px solid rgb(244, 244, 247);
+    border-bottom:2px solid rgb(244,244,247);
     font-size:28px;
     padding-bottom:9px;
     margin-bottom:50px;
     color:#fff;
   }
   .contents-item{
-    float: left;
-    margin-right: 40px;
+    float:left;
+    margin-right:40px;
   }
   .contents-item p{
     font-size:26px;
-    margin-top: 25px;
+    margin-top:25px;
   }
   }
   @media screen and (max-width:767px) { 
     a:link {color:#fff; transition:2s;}
     a:visited{color:#fff;}
-    a:hover { color:#30e4f1;}
+    a:hover{color:#30e4f1;}
     body{
-      font-family: "Avenir Next";
+      font-family:"Avenir Next";
       background-image:url("alley.jpg")
     }
     li{
-      list-style: none;
+      list-style:none;
     }
    .main{
-     padding-top: 90px;
+     padding-top:90px;
    }
     header{
-      background-color:rgba(233, 198, 145, 0.623);
+      background-color:rgba(233,198,145,0.623);
       height:110px;
       margin:4px;
     }
     .header-logo{
-      float: left;
+      float:left;
       font-size:30px;
       padding:15px 20px 17px 20px;
     }
@@ -83,8 +83,8 @@
     }
     .copy-container h1{
       color:#fff;
-      padding-top: 90px;
-      padding-left: 20px;
+      padding-top:90px;
+      padding-left:20px;
       font-size:60px;
       }
       .contents h3{
